Fixes for cropped icons
Closes-Bug: #1541376

- Added extra space around icons
- Fixed positions for some icons
- Converted some icons from .ttf to .svg vector format

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -83,28 +83,39 @@
 }
 
 .glyphicon-warning-sign {
-  .icon-default-styles(-52px, -132px);
+  .icon-default-styles(-51px, -132px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-danger-sign {
-  .icon-default-styles(-13px, -132px);
-  width: 16px;
+  .icon-default-styles(-12px, -132px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-info-sign {
-  .icon-default-styles(-13px, -612px);
+  .icon-default-styles(-12px, -611px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-bell {
-  .icon-default-styles(-13px, -652px);
+  .icon-default-styles(-12px, -651px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-trash {
-  .icon-default-styles(-13px, -691px);
+  .icon-default-styles(-12px, -691px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-edit {
-  .icon-default-styles(-56px, -691px);
+  .icon-default-styles(-52px, -691px);
+  width: 17px;
+  height: 17px;
 }
 
 .node-management-button-sizes {
@@ -173,9 +184,9 @@
 }
 
 .glyphicon-selected-role {
-  .icon-default-styles(-12px, -852px);
+  .icon-default-styles(-12px, -851px);
   width: 17px;
-  height: 16px;
+  height: 17px;
 }
 
 .glyphicon-indeterminated-role {
@@ -184,14 +195,18 @@
 }
 
 .discard-changes-icon {
-  .icon-default-styles(-13px, -572px);
+  .icon-default-styles(-12px, -571px);
+  width: 17px;
+  height: 17px;
   &:hover {
-    background: url(@common-icons-sprite) -53px -572px no-repeat;
+    background: url(@common-icons-sprite) -52px -571px no-repeat;
   }
 }
 
 .glyphicon-ok-sign {
-  .icon-default-styles(-13px, -812px);
+  .icon-default-styles(-12px, -811px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-lock {
@@ -211,6 +226,31 @@
   width: 13px;
   height: 14px;
 }
+
+.glyphicon-plus-white {
+  .icon-default-styles(-12px, -1051px);
+  width: 17px;
+  height: 17px;
+}
+
+.glyphicon-plus-dark {
+  .icon-default-styles(-52px, -1051px);
+  width: 17px;
+  height: 17px;
+}
+
+.glyphicon-minus-white {
+  .icon-default-styles(-12px, -1091px);
+  width: 17px;
+  height: 17px;
+}
+
+.glyphicon-minus-dark {
+  .icon-default-styles(-52px, -1091px);
+  width: 17px;
+  height: 17px;
+}
+
 
 .base-btn-link-colors() {
   @base-btn-link-color: @link-color;
@@ -294,6 +334,15 @@ button, .btn:not(.btn-link) {.font-semibold;}
   border-color: @navbar-color;
   outline: 0;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(red(@navbar-color), green(@navbar-color), blue(@navbar-color), 0.6);
+}
+
+.btn > i {
+  display: inline-block;
+  float: left;
+  top: 1px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
 }
 
 .btn-success {
@@ -840,7 +889,7 @@ input[type=range] {
           font-size: @base-font-size + 2px;
           float: left;
           width: 10%;
-          margin-top: 2px;
+          top: 0;
         }
         p {
           display: block;
@@ -1700,7 +1749,7 @@ input[type=range] {
   }
 
   .view-mode-switcher .btn-group label, .node-list-management-buttons button {
-    padding: 7px 10px 3px;
+    padding: 7px 10px 8px;
   }
 
   .well {
@@ -1710,6 +1759,9 @@ input[type=range] {
       .font-semibold;
       .btn-link {
         padding: 0;
+        .glyphicon-filter {
+          margin-top: 4px;
+        }
       }
     }
     .multiselect {
@@ -1725,6 +1777,17 @@ input[type=range] {
 
   .help-block {
     display: none;
+  }
+
+  .filters {
+    .btn-reset-filters {
+      .discard-changes-icon {
+        margin-right: 5px;
+      }
+    }
+    .glyphicon-filter {
+      top: 4px;
+    }
   }
 
   .active-sorters-filters {
@@ -1755,6 +1818,9 @@ input[type=range] {
         position: absolute;
         top: 0;
         right: @management-panel-indent * 3;
+      }
+      .glyphicon-arrow-down {
+        top: 2px;
       }
     }
     .active-filters + .active-sorters {
@@ -1813,12 +1879,22 @@ input[type=range] {
     margin-right: @management-panel-indent;
     .glyphicon {
       padding-left: @management-panel-indent;
+      float: none;
+      float: none;
     }
   }
   .sorters {
     .form-control {
       width: auto;
       float: left;
+    }
+    .btn-reset-sorting {
+      .discard-changes-icon {
+        margin-right: 5px;
+      }
+    }
+    .glyphicon-sort {
+      top: 4px;
     }
   }
 
@@ -2854,9 +2930,6 @@ input[type=range] {
         }
         &.notification-type {
           width: 3%;
-          .glyphicon {
-            margin: 2px 0px;
-          }
         }
         &.notification-message {
           width: 91%;
@@ -2864,6 +2937,7 @@ input[type=range] {
             padding: 0;
             border: 0;
             user-select: text;
+            vertical-align: baseline;
           }
         }
       }
@@ -2946,7 +3020,7 @@ input[type=range] {
       i {
         display: block;
         position: absolute;
-        top: 16px;
+        top: 15px;
         & + span {
           display: inline-block;
           margin-left: 24px;
@@ -3075,6 +3149,10 @@ input[type=range] {
       .wizard-steps-box {
         height: @wizard-body-height - @wizard-body-padding;
         overflow: auto;
+        i {
+          margin-top: -2px;
+          top: 4px;
+        }
         .form-group {
           margin-right: 0;
           margin-bottom: 0;
@@ -3203,6 +3281,9 @@ input[type=range] {
   .modal-footer {
     .btn-group {
       margin-left: 5px;
+    }
+    button > i {
+      float: none;
     }
   }
   &.always-show-scrollbar {
@@ -3936,8 +4017,8 @@ input[type=range] {
     left: 5px;
     top: 10px;
     z-index: 1;
-    width: 15px;
-    height: 15px;
+    width: 17px;
+    height: 17px;
   }
   .page-buttons {
     .btn-group {
@@ -4432,7 +4513,7 @@ input[type=range] {
 
   .btn-add-nodes {
     .glyphicon {
-      margin-right: @dashboard-offset;
+      margin-right: @dashboard-offset / 2;
     }
   }
 
@@ -4501,12 +4582,12 @@ input[type=range] {
       input[type=text] {
         width: 240px;
         height: 32px;
-        margin: -9px 0 0 -13px;
+        margin: -21px 0 0 -12px;
         float: left;
       }
     }
     .capacity-block {
-      margin-bottom: 6px;
+      margin-bottom: 15px;
       .capacity-items {
         margin-top: -9px;
         > div {
@@ -4531,6 +4612,7 @@ input[type=range] {
       }
     }
     .statistics-block {
+      margin-bottom: 15px;
       .cluster-info-title {
         margin-bottom: @dashboard-offset;
       }
@@ -4575,17 +4657,16 @@ input[type=range] {
         }
       }
       .deploy-btn {
-        padding-top: 2px;
         display: block;
         text-align: left;
         .deploy-icon {
           position: relative;
           display: inline-block;
-          background: url(@common-icons-sprite) no-repeat -10px -90px;
+          background: url(@common-icons-sprite) no-repeat -10px -93px;
           margin-right: 6px;
           width: 22px;
           height: 18px;
-          top: 3px;
+          top: 2px;
         }
       }
       .btn-discard-changes {
@@ -4593,10 +4674,10 @@ input[type=range] {
         margin-right: 6px;
         border: none;
         position: relative;
-        top: -1px;
-        height: 15px;
+        top: -2px;
         .discard-changes-icon {
           display: inline-block;
+          margin-top: -2px;
         }
       }
     }
